Pause & Main Menu Base

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,14 @@ CommonButtonAcceptKeyHandling=TriggerClick
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1A9796934056EE4F887886BD51218D2B
+
+[CommonInputPlatformSettings_Windows CommonInputPlatformSettings]
+DefaultInputType=MouseAndKeyboard
+bSupportsMouseAndKeyboard=True
+bSupportsTouch=False
+bSupportsGamepad=True
+DefaultGamepadName=Generic
+bCanChangeGamepadType=True
++ControllerData=/Game/Blueprints/UI/CommonUISetup/BP_KeyboardData.BP_KeyboardData_C
++ControllerData=/Game/Blueprints/UI/CommonUISetup/BP_ControllerData.BP_ControllerData_C
+
