HAD TO ADD MY GAME INSTANCE !!!

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Maps/FirstLevel.FirstLevel
 EditorStartupMap=/Game/Maps/FirstLevel.FirstLevel
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
+GameInstanceClass=/Game/Blueprints/Core/BP_GameInstance.BP_GameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
